# summer_work

./: README.md
summer work/1.qua_pos/include/: head.h
summer work/1.qua_pos/src/: main.cpp  position.cpp  quaternion.cpp  transform.cpp
summer work/2.kal_cam/Pnp/: CMakeLists.txt
summer work/2.kal_cam/Pnp/src/: main.cpp
summer work/2.kal_cam/armor_visual/include/: armor.hpp
summer work/2.kal_cam/armor_visual/src/: main.cpp  number_classifier.cpp  pnp.cpp
summer work/2.kal_cam/camera calibration/: Camera_calibration.py
summer work/2.kal_cam/camera calibration/output/: data.npz  内参数矩阵.txt  外参数矩阵.txt  畸变系数.txt
summer work/3.kalman/homework1/: main.py
summer work/3.kalman/homework2/: main.py
summer work/3.kalman/homework3/: main.py
summer work/4.synthesis/: CMakeLists.txt
summer work/4.synthesis/include/: armor.hpp  invoke.hpp  quater_pos.hpp
summer work/4.synthesis/src/: invoke.cpp  main.cpp
summer work/4.synthesis/src/armor_visual/: number_classifier.cpp  pnp.cpp
summer work/4.synthesis/src/quater_pos/: quaternion.cpp  (+1 more)
summer work/5.Network Communications/: CMakeLists.txt
summer work/5.Network Communications/data/camera/: distcoeffs.txt  matrix.txt
summer work/5.Network Communications/include/: client.hpp  number_classifier.hpp  picture_process.hpp  quater_pos.hpp
summer work/5.Network Communications/src/: invoke.cpp  main.cpp  picture_process.cpp  receive_send.cpp
summer work/5.Network Communications/src/armor_visual/: number_classifier.cpp  pnp.cpp
summer work/5.Network Communications/src/quater_pos/: position.cpp  transform.cpp
